// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadBook action 1`] = `
Object {
  "id": 1,
  "type": "LOAD_BOOK",
}
`;

exports[`sliderPositionChanged action 1`] = `
Object {
  "percentage": 0.56,
  "type": "SLIDER_POSITION_CHANGED",
}
`;

exports[`sliderReleased action 1`] = `
Object {
  "percentage": 0.65,
  "type": "SLIDER_RELEASED",
}
`;

exports[`updateBookPositionData action 1`] = `
Object {
  "id": 1,
  "location": Object {
    "percentage": 0.76,
  },
  "type": "UPDATE_BOOK_POSITION_DATA",
}
`;

exports[`updateCurrentBookData action 1`] = `
Object {
  "data": Object {
    "author": "The book author",
    "cover_image": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
    "current_location": Object {
      "end": null,
      "percentage": 0,
      "start": null,
    },
    "file": "blob",
    "id": 1,
    "parsed_data": null,
    "title": "A Good Book",
    "total_locations": 0,
  },
  "type": "UPDATE_CURRENT_BOOK_DATA",
}
`;
